# V-Mapper

./: .buildinfo  .gitignore  README.md  VMapper-0.1.0-py3-none-any.whl  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  vmapper-0.1.0-py3-none-any.whl  vmapper.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  vmapper.doctree
.doctrees/examples/: index.doctree
.doctrees/reference/: index.doctree  vmapper.doctree
.github/workflows/: main.yml
Paper_materials/Endocrine/: V-Mapper_Endocrine.ipynb
Paper_materials/Lorenz/: V-Mapper_Lorenz.ipynb
_sources/: index.rst.txt  modules.rst.txt  vmapper.rst.txt
_sources/examples/: index.rst.txt
examples/: index.html
reference/: index.html  vmapper.html
sphinx/: conf.py  index.rst
sphinx/reference/: index.rst  screcode.rst  vmapper.rst
vmapper/: __init__.py  color.py  dmapper.py  mapper.py  meta_func.py  smapper.py  vmapper.py
