[tool.poetry]
name = "VMapper"
version = "0.1.0"
description = "V-Mapper"
authors = ["Yusuke Imoto"]
readme = "README.md"
repository = "https://github.com/yusuke-imoto-lab/V-Mapper"
documentation = "https://yusuke-imoto-lab.github.io/V-Mapper/"

[tool.poetry.dependencies]
python       = ">=3.8,<3.11"
numpy        = ">=1.20"
matplotlib = ">=3.4.3"
scikit-learn = ">=0.24"
graphviz = ">=0.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
